crates/cribo/tests/snapshots/execution_results@all_variable_handling.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/all_variable_handling/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Testing simple module exports:\npublic_func() = Hello from public_func\nCONSTANT = 42\n\nTesting nested package exports:\nexported_from_init() = From init, using helper: helper result\nsub_function() = Hello from submodule\n\nTesting conflict resolution:\nmessage = from conflict_module\n\n'public_func' in simple_module.__all__ = True\n'CONSTANT' in simple_module.__all__ = True\n\n'sub_function' in submodule.__all__ = True",
    stderr: "",
}
