crates/cribo/tests/snapshots/execution_results@xfail_version_import_with_init_functions.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_version_import_with_init_functions/main.py
---
ExecutionResults {
    status: Success,
    stdout: "User agent: mypackage/3.0.0\nVersion from package: 3.0.0",
    stderr: "",
}
