crates/cribo/tests/snapshots/requirements@alias_transformation_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/alias_transformation_test/main.py
---
packages: []
count: 0
